@@ -2,13 +2,14 @@ package com.example.ecsite.service;
 
 import com.example.ecsite.repository.AdministratorRepository;
 import lombok.RequiredArgsConstructor;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.User;
 import org.springframework.security.core.userdetails.UserDetails;
 import org.springframework.security.core.userdetails.UserDetailsService;
 import org.springframework.security.core.userdetails.UsernameNotFoundException;
 import org.springframework.stereotype.Service;
 
-import java.util.Collections;
+import java.util.List;
 
 @Service
 @RequiredArgsConstructor
@@ -16,15 +17,15 @@ public class AdminDetailsService implements UserDetailsService {
 
     private final AdministratorRepository repository;
 
-    public UserDetails loadUserByUsername(String adminName) {
-        return this.repository.findByName(adminName)
+    public UserDetails loadUserByUsername(String email) {
+        return this.repository.findByEmail(email)
                 .map(
                         admin -> new User(
-                                admin.getName(),
+                                admin.getEmail(),
                                 admin.getPassword(),
-                                Collections.emptyList()
+                                List.of(new SimpleGrantedAuthority("authority:admin"))
                         )
                 )
-                .orElseThrow(() -> new UsernameNotFoundException(adminName + " not found"));
+                .orElseThrow(() -> new UsernameNotFoundException(email + " not found"));
     }
 }
